# docker-python-server

./: Makefile  README.md  dockerfile  manager.py  pyproject.toml
tools/: setup_environment.sh
